# GBBuilder

./: .gitignore  README.md
docs/: _config.yml  index.md
examples/blob/: CMakeLists.txt  MakeFile  blob.c  blob_sprite.gbr
examples/blob/include/: blob_sprite.h
examples/blob/src/: blob_sprite.c
examples/draw/: draw.c
examples/helloworld/: CMakeLists.txt  MakeFile  helloworld.c
examples/helloworld/src/: helloworld.c
examples/sketchr/: CMakeLists.txt  MakeFile
examples/sketchr/src/: sketchr.c
scripts/: build.bat  download_3rdparty.bat  run.bat  test.bat
